datasaude-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: datasaude-api
  name: datasaude-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: datasaude-api
  template:
    metadata:
      labels:
        app: datasaude-api
    spec:
      containers:
        - image: cbeloni/datasaude-api-amd64:latest
          name: datasaude-api
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: datasaude-api-svc
spec:
  type: ClusterIP
  selector:
    app: datasaude-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datasaude-api-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
spec:
  rules:
    - host: datasaude-api.192.168.0.205.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: datasaude-api-svc
                port:
                  number: 80
    - host: datasaude-api.beloni.dev.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: datasaude-api-svc
                port:
                  number: 80
