emby-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emby-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: emby.192.168.0.205.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emby-service
                port:
                  number: 80
    - host: emby.187.2.175.237.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emby-service
                port:
                  number: 80
    - host: emby.beloni.dev.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emby-service
                port:
                  number: 80
